# gawl

./: .gitmodules  LICENSE  README.md  meson.build  submodules.txt
example/multiwindow/: main.cpp  meson.build
examples/: background-texture-loading.cpp  empty-texture.cpp  graphics.cpp  keyboard.cpp  meson.build  mouse.cpp  multiwindow.cpp  polygon.cpp  textrender.cpp  touch.cpp
src/: align.hpp  application.cpp  application.hpp  binder.hpp  buttons.hpp  color.hpp  declvar.hpp  earcut.hpp  empty-texture-data.hpp  empty-texture.cpp  empty-texture.hpp  error.hpp  fc.cpp  fc.hpp  fd.hpp  frame-buffer-info.cpp  frame-buffer-info.hpp  gawl-application.cpp  gawl-application.hpp  gawl-window.cpp  gawl-window.hpp  gawl.hpp  global.cpp  global.hpp  globject.cpp  globject.hpp  graphic-base.cpp  graphic-base.hpp  graphic-data.hpp  graphic-globject.hpp  graphic-shader.cpp  graphic-shader.hpp  graphic.cpp  graphic.hpp  include.hpp  internal-type.hpp  jxl-decoder.cpp  jxl-decoder.hpp  meson.build  misc.cpp  (+43 more)
src/wayland/: app-event.hpp  app-events.hpp  application.cpp  application.hpp  eglobject.cpp  eglobject.hpp  gawl.hpp  meson.build  shared-data.hpp  towl  towl.hpp  wayland-window.hpp  window-base.hpp  window-events.hpp  window.cpp  window.hpp  wl-object.cpp  wl-object.hpp  wlobject.hpp
src/wayland/_old/: application.hpp  gawl.hpp  wlobject.hpp
test/: background-texture-loading.cpp  fc.hpp  graphics.cpp  keyboard.cpp  meson.build  mouse.cpp  multiwindow.cpp  polygon.cpp  textrender.cpp
