subdir('towl')

gawl_wayland_deps = towl_deps + towl_egl_deps

#gawl_wayland_headers = files(
#  'app-event.hpp',
#  'application.hpp',
#  'eglobject.hpp',
#  'gawl.hpp',
#  'shared-data.hpp',
#  'towl.hpp',
#  'wayland-window.hpp',
#  'window-base.hpp',
#  'window.hpp',
#  'wlobject.hpp',
#)

gawl_wayland_files = files(
  'application.cpp',
  'eglobject.cpp',
  'window.cpp',
  'wl-object.cpp',
) + towl_files
